Planet apparent size dialog

--- a/c3dsolar.ui
+++ b/c3dsolar.ui
@@ -422,6 +422,9 @@ Zoom by mouse wheel</string>
        <property name="tickPosition">
         <enum>QSlider::TicksAbove</enum>
        </property>
+       <property name="tickInterval">
+        <number>10</number>
+       </property>
       </widget>
      </item>
      <item>
